<resources>
    <string name="app_name">RickTracker</string>
    <string name="title_today">Today</string>
    <string name="title_notifications">Notifications</string>
    <string name="day_sunday">SUN</string>
    <string name="day_monday">MON</string>
    <string name="day_tuesday">TUE</string>
    <string name="day_wednesday">WED</string>
    <string name="day_thursday">THU</string>
    <string name="day_friday">FRI</string>
    <string name="day_saturday">SAT</string>
    <string name="title_habits">Habits</string>
    <string name="add_habit">Add habit</string>
    <string name="title_create_habit">Create habit</string>
    <string name="description">Description</string>
    <string name="start_date">Start date</string>
    <string name="days">Days</string>
    <string name="duration">Duration</string>
    <string name="unit">Unit</string>
    <string name="streak">Streak</string>
    <string name="progress">Progress</string>
    <string name="this_week">This week</string>
    <string name="no_routine">No routine</string>
    <string name="habit_added">Habit added!</string>
    <string name="ten_minutes">10 minutes</string>
    <string name="no_tasks_on_date">You don\'t have any task for the selected date</string>
    <string-array name="unit_options">
        <item>Minutes</item>
        <item>Hours</item>
    </string-array>
</resources>